updated mobile version

--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
 <!-- End of Navbar -->
 
 <!-- Intro Banner -->
-<div class="container-fluid mx-lg-0 ps-lg-0 wow animate__fadeIn" data-wow-duration="1s" id="about-banner-image">
+<div class="container-fluid wow animate__fadeIn" data-wow-duration="1s" id="about-banner-image">
     <h1 class="banner-h1 wow animate__fadeInLeft" data-wow-duration="1s">Our Story:</h1>
 </div>
-<div class="container-fluid mx-lg-0 ps-lg-0" id="banner-heading">
+<div class="container-fluid" id="banner-heading">
     <h2 class="banner-h2 wow animate__fadeInRight" data-wow-duration="1s">Built from the Ground Up.</h2>
     <p class="banner-text wow animate__zoomIn" data-wow-duration="1s">We believe the best things take time and dedication. From sourcing sustainable beans to mastering 
     the perfect extraction, we've built our craft from the ground up to ensure every sip is better than the last.</p>
@@ -102,11 +102,11 @@
 <section id="team-section">
     <div class="container-fluid mx-lg-0 ps-lg-0">
     <h2 class="section-heading pb-lg-4 pb-3 wow animate__fadeIn" data-wow-duration="1s">The Faces of <span class="heading-brown">Ground Up&reg</span></h2>
-        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-lg-1 g-2">
+        <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-lg-5 g-3">
             <div class="col">
                 <div class="card h-100 shadow-sm team-card wow animate__fadeInUp" data-wow-duration="1s">
                     <div class="image-wrapper">
-                        <img class="team-image mb-4" src="assets/images/team/founder.png" onmouseover="this.src='assets/images/team/founder-hover.png';" onmouseout="this.src='assets/images/team/founder.png';" alt="Robert Downey Jr., Founder & Head Roaster">
+                        <img class="team-image img-fluid mb-4" src="assets/images/team/founder.png" onmouseover="this.src='assets/images/team/founder-hover.png';" onmouseout="this.src='assets/images/team/founder.png';" alt="Robert Downey Jr., Founder & Head Roaster">
                     </div>
                     <div class="card-content">
                         <h3 class="team-member">Robert Downey Jr.</h3>
@@ -122,7 +122,7 @@
             <div class="col">
                 <div class="card h-100 shadow-sm team-card wow animate__fadeInDown" data-wow-duration="1s">
                     <div class="image-wrapper">
-                        <img class="team-image mb-4" src="assets/images/team/lead-barista.png" onmouseover="this.src='assets/images/team/lead-barista-hover.png';" onmouseout="this.src='assets/images/team/lead-barista.png';" alt="Chris Evans, Lead Barista">
+                        <img class="team-image img-fluid mb-4" src="assets/images/team/lead-barista.png" onmouseover="this.src='assets/images/team/lead-barista-hover.png';" onmouseout="this.src='assets/images/team/lead-barista.png';" alt="Chris Evans, Lead Barista">
                     </div>
                     <div class="card-content">
                         <h3 class="team-member">Chris Evans</h3>
@@ -138,7 +138,7 @@
             <div class="col">
                 <div class="card h-100 shadow-sm team-card wow animate__fadeInUp" data-wow-duration="1s">
                     <div class="image-wrapper">
-                        <img class="team-image mb-4" src="assets/images/team/manager.png" onmouseover="this.src='assets/images/team/manager-hover.png';" onmouseout="this.src='assets/images/team/manager.png';" alt="Brie Larson, Shop Manager">
+                        <img class="team-image img-fluid mb-4" src="assets/images/team/manager.png" onmouseover="this.src='assets/images/team/manager-hover.png';" onmouseout="this.src='assets/images/team/manager.png';" alt="Brie Larson, Shop Manager">
                     </div>                                                                                                                                                                                                    
                     <div class="card-content">
                         <h3 class="team-member">Brie Larson</h3>
@@ -154,7 +154,7 @@
             <div class="col">
                 <div class="card h-100 shadow-sm team-card wow animate__fadeInDown" data-wow-duration="1s">
                     <div class="image-wrapper">
-                        <img class="team-image mb-4" src="assets/images/team/junior-barista.png" onmouseover="this.src='assets/images/team/junior-barista-hover.png';" onmouseout="this.src='assets/images/team/junior-barista.png';" alt="Tom Holland, Junior Barista">
+                        <img class="team-image img-fluid mb-4 wow animate__animated animate__pulse" src="assets/images/team/junior-barista.png" onmouseover="this.src='assets/images/team/junior-barista-hover.png';" onmouseout="this.src='assets/images/team/junior-barista.png';" alt="Tom Holland, Junior Barista">
                     </div>                                                                                                                                                                                                    
                     <div class="card-content">
                         <h3 class="team-member">Tom Holland</h3>
@@ -176,7 +176,7 @@
 <section id="insta-section">
     <h2 class="section-heading mb-1 wow animate__fadeIn" data-wow-duration="1s">Mug Shots</h2>
     <div><p class="insta-title wow animate__bounceInUp" data-wow-duration="1s">Follow the Journey <a href="https://instagram.com/groundupcafe" target="_blank" class="insta-handle">@groundupcafe</a></p></div>
-    <div class="row row-cols-3 g-2 pt-4 wow animate__fadeInLeft" data-wow-duration="1s">
+    <div class="row row-cols-3 g-lg-2 g-mt-1 g-1 mt-0 pt-4 wow animate__fadeInLeft" data-wow-duration="1s">
         <div class="col-lg-4">
             <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post1.jpg">
             <div class="ratio ratio-1x1">
@@ -199,7 +199,7 @@
             </a>
         </div>
     </div>
-    <div class="row row-cols-3 g-2 mt-1 wow animate__fadeInRight" data-wow-duration="1s">
+    <div class="row row-cols-3 g-lg-2 g-mt-1 g-1 mt-0 wow animate__fadeInRight" data-wow-duration="1s">
         <div class="col-lg-4">
             <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post4.jpg">
             <div class="ratio ratio-1x1">
@@ -222,7 +222,7 @@
             </a>
         </div>
     </div>
-    <div class="row row-cols-3 g-2 mt-1 wow animate__fadeInLeft" data-wow-duration="1s">
+    <div class="row row-cols-3 g-lg-2 g-mt-1 g-1 mt-0 wow animate__fadeInLeft" data-wow-duration="1s">
         <div class="col-lg-4">
             <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post7.jpg">
             <div class="ratio ratio-1x1">
@@ -265,7 +265,7 @@
 <footer id="footer-section" class="wow animate__fadeIn" data-wow-duration="1s">
     <div class="container-fluid mx-lg-0 ps-lg-0">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4">
                 <p class="footer-text pb-4">Designed and Developed by Aldrin Manahan. This is only for educational purposes and not for profit. Credit goes to the respective owners.</p>
                 <div class="social-links gap-1">
                     <a class="social-link" href="http://www.facebook.com" target="_blank"><i class="footer-socials fa-brands fa-square-facebook fa-2x"></i></a>
@@ -273,14 +273,14 @@
                     <a class="social-link" href="http://www.x.com" target="_blank"><i class="footer-socials fa-brands fa-square-x-twitter fa-2x"></i></a>
                 </div>     
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4">
                 <h5 class="footer-title pb-2">Contact <span class="title-brown">Info</a></h5>
                 <p class="footer-contact">Telephone:<a href="tel:021234567" class="span-brown"><strong> (02) 123-4567</strong></a></p>
                 <p class="footer-contact">Mobile:<a href="tel:631234567890" class="span-brown"><strong> (+63) 123-456-7890</strong></a></p>
                 <p class="footer-contact">Email:<a href="mailto:orders@groundupcafe.com" class="span-brown"><strong> orders@groundupcafe.com</strong></a></p>
                 <p class="footer-contact">Address:<a href="https://maps.app.goo.gl/hja4Dzv6GstxMT2GA" target="_blank" class="span-brown"> <strong>U.P. Town Center, Katipunan Ave,<br> Diliman, Quezon City, 1108 Metro Manila</strong></a></p>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-3">
                 <h5 class="footer-title pb-2">Main <span class="title-brown">Menu</span></h5>
                 <ul class="footer-nav ms-auto list-unstyled">
                     <li class="link-text"><a class="footer-link" href="index.html">Home</a></li>
@@ -289,7 +289,7 @@
                     <li class="link-text"><a class="footer-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
-            <div class="footer-brand col-lg-1 d-flex justify-content-center">
+            <div class="footer-brand col-lg-1 col-md-1 d-flex justify-content-center">
                 <a class="footer-brand" href="index.html"><img class="footer-logo img-fluid" src="assets/images/footer.png"></a>
             </div>
         </div>
