--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
 <!-- End of Navbar -->
  
 <!-- Intro Banner -->
-<div class="container-fluid mx-lg-0 ps-lg-0 wow animate__fadeIn" data-wow-duration="1s" id="contact-banner-image">
+<div class="container-fluid wow animate__fadeIn" data-wow-duration="1s" id="contact-banner-image">
     <h1 class="banner-h1 wow animate__fadeInLeft" data-wow-duration="1s">We're brewing at UPTC</h1>
 </div>
-<div class="container-fluid mx-lg-0 ps-lg-0" id="banner-heading">
+<div class="container-fluid" id="banner-heading">
     <h2 class="banner-h2 wow animate__fadeInRight" data-wow-duration="1s">Your favorite coffee spot.</h2>
     <p class="banner-text wow animate__zoomIn" data-wow-duration="1s">Located in the heart of Quezon City, we're ready to serve you the perfect cup. Whether you're stopping by for a 
     quick caffeine fix or staying to work, you'll find everything you need right here.</p>
