--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <!-- 1st Slide -->
                 <div class="carousel-item active">
                     <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-lg-5 g-3">
-                        <div class="col-10 col-lg-4 col-md-4 mx-auto">
+                        <div class="col-10 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p> 
