--- a/menu.html
+++ b/menu.html
@@ -210,7 +210,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="d-flex justify-content-between align-items-baseline mb-1">
-                <h5 class="product-title mb-3">Iced Pure Matcha and Espresso Fusion</h5>
+                <h5 class="product-title mb-3">Iced Pure Matcha Espresso Fusion</h5>
                 <div class="price-text">
                     <span class="me-4">₱165</span> <span>₱185</span>
                 </div>
