--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ground Up Cafe</title>
     <!-- Favicon -->
-     <link rel="icon" type="image/gif/png" href="assets/images/favicon.ico">
+     <link rel="icon" type="image/gif/png" sizes="32x32" href="assets/images/favicon.ico">
+     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -86,10 +87,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="d-flex justify-content-between align-items-baseline mb-1">
-                <h5 class="product-title mb-0">Brown Sugar Iced Shaken Espresso
-                    <span class="star-rating">★</span>
-                </h5>
-                </h5>
+                <h5 class="product-title mb-0">Brown Sugar Iced Shaken Espresso</h5>
                 <div class="price-text">
                     <span class="me-4">₱180</span> <span>₱195</span>
                     <div class="beverage-text">Iced</div>
