--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <section id="intro-section">
     <div class="container-fluid mx-lg-0 ps-lg-0">
         <div class="row">
-            <div class="col-lg-7 col-md-8 mx-autowow animate__fadeIn" data-wow-duration="1s">
-                <h2 class="section-heading pb-lg-4 pb-3">Great Coffee, From the <span class="heading-brown">Ground Up&reg</span></h2>
+            <div class="col-lg-7 col-md-8 mx-auto wow animate__fadeIn" data-wow-duration="1s">
+                <h2 id="homepage-heading" class="section-heading pb-lg-4 pb-3">Great Coffee, From the <span class="heading-brown">Ground Up&reg</span></h2>
                 <div class="homepage-text">    
                     <p class="pb-lg-2 pb-1">Experience coffee at its peak. We source the highest-grade, ethically-grown beans to ensure every cup 
                     is a masterpiece of flavor and sustainability. Ground Up is more than a coffee shop—it's a commitment to the art of the perfect brew.</p>
@@ -78,7 +78,7 @@
     <div class="container-fluid mx-lg-0 ps-lg-0">
     <h2 class="section-heading pb-lg-4 pb-3 wow animate__fadeIn" data-wow-duration="1s">Our Signature Offerings</h2>
         <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-lg-5 g-3 wow animate__fadeInDownBig" data-wow-duration="1s">
-            <div class="col-10 col-lg-4 col-md-4 mx-auto">
+            <div class="col-9 col-lg-4 col-md-4 mx-auto">
                 <div class="card h-100 services-card">
                     <div class="card-body">
                         <img class="services-image mb-4" src="assets/images/services/coffee.png" alt="coffee icon">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 col-lg-4 col-md-4 mx-auto">
+            <div class="col-9 col-lg-4 col-md-4 mx-auto">
                 <div class="card h-100 services-card">
                     <div class="card-body">
                         <img class="services-image mb-4" src="assets/images/services/coffee-beans.png" alt="coffee beans icon">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 col-lg-4 col-md-4 mx-auto">
+            <div class="col-9 col-lg-4 col-md-4 mx-auto">
                 <div class="card h-100 services-card">
                     <div class="card-body">
                         <img class="services-image mb-4" src="assets/images/services/pastry.png" alt="pastry icon">
@@ -122,7 +122,7 @@
                 <!-- 1st Slide -->
                 <div class="carousel-item active">
                     <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-lg-5 g-3">
-                        <div class="col-10 mx-auto">
+                        <div class="col-9 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p> 
@@ -138,7 +138,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-10 mx-auto">
+                        <div class="col-9 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p>
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-10 mx-auto">
+                        <div class="col-9 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p>
@@ -175,7 +175,7 @@
                 <!-- 2nd Slide -->
                 <div class="carousel-item">
                     <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-lg-5 g-3">
-                        <div class="col-10 mx-auto">
+                        <div class="col-9 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p> 
@@ -191,7 +191,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-10 mx-auto">
+                        <div class="col-9 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p>
@@ -207,7 +207,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-10 mx-auto">
+                        <div class="col-9 mx-auto">
                             <div class="card h-100 shadow-sm reviews-card">
                                 <div class="card-body">
                                     <p class="reviews-text star-rating mb-4 fs-3">★★★★★</p>
