--- a/menu.html
+++ b/menu.html
@@ -87,7 +87,9 @@
             </div>
             <div class="col-lg-6">
                 <div class="d-flex justify-content-between align-items-baseline mb-1">
-                <h5 class="product-title mb-0">Brown Sugar Iced Shaken Espresso</h5>
+                <h5 class="product-title mb-0">Brown Sugar Iced Shaken Espresso
+                    <span class="star-rating">★</span>
+                </h5>
                 <div class="price-text">
                     <span class="me-4">₱180</span> <span>₱195</span>
                     <div class="beverage-text">Iced</div>
