--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Ground Up&reg Cafe</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/gif/png" sizes="32x32" href="assets/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/gif/png" sizes="32x32" href="assets/images/logo/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -22,7 +22,7 @@
 <!-- Navbar -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark wow animate__fadeIn" data-wow-duration="1s">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/circle-logo.png" alt="ground-up-circle-logo"><img class="logo" src="assets/images/logo.png" alt="ground-up-logo"></a>
+        <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo/circle-logo.png" alt="ground-up-circle-logo"><img class="logo" src="assets/images/logo/logo.png" alt="ground-up-logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><img src="assets/images/navbar-toggler.png"></span>
         </button>
@@ -101,72 +101,43 @@
 
 <!-- Team Section -->
 <section id="team-section">
-    <div class="container-fluid mx-lg-0 ps-lg-0">
-    <h2 class="section-heading pb-lg-4 pb-3 wow animate__fadeIn" data-wow-duration="1s">The Faces of <span class="heading-brown">Ground Up&reg</span></h2>
-        <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-lg-5 g-3">
-            <div class="col">
-                <div class="card h-100 shadow-sm team-card wow animate__fadeInUp" data-wow-duration="1s">
-                    <div class="image-wrapper">
-                        <img class="team-image img-fluid mb-4" src="assets/images/team/founder.png" onmouseover="this.src='assets/images/team/founder-hover.png';" onmouseout="this.src='assets/images/team/founder.png';" alt="Robert Downey Jr., Founder & Head Roaster">
-                    </div>
-                    <div class="card-content">
-                        <h3 class="team-member">Robert Downey Jr.</h3>
-                        <p class="team-role pb-2">Founder / Head Roaster</p>
-                        <p class="team-bio pb-3">Robert spent a decade traveling coffee regions before opening Ground Up. He's the brain behind our signature house blend.</p>
-                        <div class="order-tag">
-                            <small>Go-to Order:</small>
-                            <span>Hot White Chocolate Mocha</span>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-fluid p-0 team-container">
+    <h2 id="team-heading" class="section-heading wow animate__fadeIn mb-0" data-wow-duration="1s">The Faces of <span class="heading-brown">Ground Up&reg</span></h2>
+        <div class="row g-0 team-wrapper">
+            <div class="col team-card card-one">
+            <div class="text-content pt-5">
+                <h2 class="member-name">Robert</h2>
+                <p class="member-role">Founder</p>
+                <p class="member-bio">Robert spent a decade traveling coffee regions before opening Ground Up&reg. He's the brain behind our Signature Latte.</p>
             </div>
-            <div class="col">
-                <div class="card h-100 shadow-sm team-card wow animate__fadeInDown" data-wow-duration="1s">
-                    <div class="image-wrapper">
-                        <img class="team-image img-fluid mb-4" src="assets/images/team/lead-barista.png" onmouseover="this.src='assets/images/team/lead-barista-hover.png';" onmouseout="this.src='assets/images/team/lead-barista.png';" alt="Chris Evans, Lead Barista">
-                    </div>
-                    <div class="card-content">
-                        <h3 class="team-member">Chris Evans</h3>
-                        <p class="team-role pb-2">Lead Barista</p>
-                        <p class="team-bio pb-3">The resident latte art champion. Chris believes that a coffee should look as good as it tastes. Ask him for a horchata!</p>
-                        <div class="order-tag">
-                            <small>Go-to Order:</small>
-                            <span>Brown Sugar Iced Shaken Espresso</span>
-                        </div>
-                    </div>
-                </div>
+            <img src="assets/images/team/founder-hover.png" class="img-fluid member-image" alt="Robert Downey Jr., Founder & Head Roaster">
             </div>
-            <div class="col">
-                <div class="card h-100 shadow-sm team-card wow animate__fadeInUp" data-wow-duration="1s">
-                    <div class="image-wrapper">
-                        <img class="team-image img-fluid mb-4" src="assets/images/team/manager.png" onmouseover="this.src='assets/images/team/manager-hover.png';" onmouseout="this.src='assets/images/team/manager.png';" alt="Brie Larson, Shop Manager">
-                    </div>                                                                                                                                                                                                    
-                    <div class="card-content">
-                        <h3 class="team-member">Brie Larson</h3>
-                        <p class="team-role pb-2">Shop Manager</p>
-                        <p class="team-bio pb-3">Brie keeps the vibes high and the music curated. She's the one who likely knows your name and remembers your birthday.</p>
-                        <div class="order-tag">
-                            <small>Go-to Order:</small>
-                            <span>Iced Hazelnut Mocha Macchiato</span>
-                        </div>
-                    </div>
-                </div>
+
+            <div class="col team-card card-two">
+            <div class="text-content pt-5">
+                <h2 class="member-name">Chris</h2>
+                <p class="member-role">Lead Barista</p>
+                <p class="member-bio">The resident latte art champion. Chris believes that a coffee should look as good as it tastes. Ask him for a horchata!</p>
             </div>
-            <div class="col">
-                <div class="card h-100 shadow-sm team-card wow animate__fadeInDown" data-wow-duration="1s">
-                    <div class="image-wrapper">
-                        <img class="team-image img-fluid mb-4 wow animate__animated animate__pulse" src="assets/images/team/junior-barista.png" onmouseover="this.src='assets/images/team/junior-barista-hover.png';" onmouseout="this.src='assets/images/team/junior-barista.png';" alt="Tom Holland, Junior Barista">
-                    </div>                                                                                                                                                                                                    
-                    <div class="card-content">
-                        <h3 class="team-member">Tom Holland</h3>
-                        <p class="team-role pb-2">Junior Barista</p>
-                        <p class="team-bio pb-3">The youngest member of the squad. Tom brings high energy and a knack for finding the perfect playlist for the morning rush.</p>
-                        <div class="order-tag">
-                            <small>Go-to Order:</small>
-                            <span>Vanilla Sweet Cream Cold Brew</span>
-                        </div>
-                    </div>
-                </div>
+            <img src="assets/images/team/lead-barista-hover.png" class="img-fluid member-image" alt="Chris Evans, Lead Barista">
+            </div>
+
+            <div class="col team-card card-three">
+            <div class="text-content pt-5">
+                <h2 class="member-name">Brie</h2>
+                <p class="member-role">Shop Manager</p>
+                <p class="member-bio">Brie keeps the vibes high and the music curated. She's the one who likely knows your name and remembers your birthday.</p>
+            </div>
+            <img src="assets/images/team/manager-hover.png" class="img-fluid member-image" alt="Brie Larson, Shop Manager">
+            </div>
+
+            <div class="col team-card card-four">
+            <div class="text-content pt-5">
+                <h2 class="member-name">Tom</h2>
+                <p class="member-role">Junior Barista</p>
+                <p class="member-bio">The youngest member of the squad. Tom brings high energy and a knack for finding the perfect playlist for the morning rush.</p>
+            </div>
+            <img src="assets/images/team/junior-barista-hover.png" class="img-fluid member-image" alt="Tom Holland, Junior Barista">
             </div>
         </div>
     </div>
@@ -291,7 +262,7 @@
                 </ul>
             </div>
             <div class="footer-brand col-lg-1 col-md-1 d-flex justify-content-center">
-                <a class="footer-brand" href=""><img class="footer-logo img-fluid" src="assets/images/footer.png"></a>
+                <a class="footer-brand" href=""><img class="footer-logo img-fluid" src="assets/images/logo/footer.png"></a>
             </div>
         </div>
     </div>
