--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Ground Up&reg Cafe</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/gif/png" sizes="32x32" href="assets/images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/gif/png" sizes="32x32" href="assets/images/logo/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -22,7 +22,7 @@
 <!-- Navbar -->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark wow animate__fadeIn" data-wow-duration="1s">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/circle-logo.png" alt="ground-up-circle-logo"><img class="logo" src="assets/images/logo.png" alt="ground-up-logo"></a>
+        <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo/circle-logo.png" alt="ground-up-circle-logo"><img class="logo" src="assets/images/logo/logo.png" alt="ground-up-logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"><img src="assets/images/navbar-toggler.png"></span>
         </button>
@@ -121,7 +121,7 @@
                 </ul>
             </div>
             <div class="footer-brand col-lg-1 col-md-1 d-flex justify-content-center">
-                <a class="footer-brand" href=""><img class="footer-logo img-fluid" src="assets/images/footer.png"></a>
+                <a class="footer-brand" href=""><img class="footer-logo img-fluid" src="assets/images/logo/footer.png"></a>
             </div>
         </div>
     </div>
