--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google Fonts -->   
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Patrick+Hand&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <!-- Animate CSS -->
@@ -104,7 +105,7 @@
     <div class="container-fluid p-0 team-container">
     <h2 id="team-heading" class="section-heading wow animate__fadeIn mb-0" data-wow-duration="1s">The Faces of <span class="heading-brown">Ground Up&reg</span></h2>
         <div class="row g-0 team-wrapper">
-            <div class="col team-card card-one">
+            <div class="col team-card card-one wow animate__fadeInDown" data-wow-duration="1s">
             <div class="text-content pt-5">
                 <h2 class="member-name">Robert</h2>
                 <p class="member-role">Founder</p>
@@ -113,7 +114,7 @@
             <img src="assets/images/team/founder-hover.png" class="img-fluid member-image" alt="Robert Downey Jr., Founder & Head Roaster">
             </div>
 
-            <div class="col team-card card-two">
+            <div class="col team-card card-two wow animate__fadeInUp" data-wow-duration="1s">
             <div class="text-content pt-5">
                 <h2 class="member-name">Chris</h2>
                 <p class="member-role">Lead Barista</p>
@@ -122,7 +123,7 @@
             <img src="assets/images/team/lead-barista-hover.png" class="img-fluid member-image" alt="Chris Evans, Lead Barista">
             </div>
 
-            <div class="col team-card card-three">
+            <div class="col team-card card-three wow animate__fadeInDown" data-wow-duration="1s">
             <div class="text-content pt-5">
                 <h2 class="member-name">Brie</h2>
                 <p class="member-role">Shop Manager</p>
@@ -131,7 +132,7 @@
             <img src="assets/images/team/manager-hover.png" class="img-fluid member-image" alt="Brie Larson, Shop Manager">
             </div>
 
-            <div class="col team-card card-four">
+            <div class="col team-card card-four wow animate__fadeInUp" data-wow-duration="1s">
             <div class="text-content pt-5">
                 <h2 class="member-name">Tom</h2>
                 <p class="member-role">Junior Barista</p>
