updated the modal and team section

--- a/about.html
+++ b/about.html
@@ -151,21 +151,21 @@
     <div><p class="insta-title wow animate__bounceInUp" data-wow-duration="1s">Follow the Journey <a href="https://instagram.com/groundupcafe" target="_blank" class="insta-handle">@groundupcafe</a></p></div>
     <div class="row row-cols-3 g-lg-2 g-mt-1 g-1 mt-0 pt-4 wow animate__fadeInLeft" data-wow-duration="1s">
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post1.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal1" data-bs-img="./assets/images/gallery/post1.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post1.jpg" class="img-fluid object-fit-cover hover-zoom" alt="Gallery Image 1">
             </div>
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post2.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal2" data-bs-img="./assets/images/gallery/post2.jpg">
             <div class="ratio ratio-1x1">
                  <img src="./assets/images/gallery/post2.jpg" class="img-fluid object-fit-cover hover-zoom" alt="Gallery Image 2">
             </div>
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post3.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal3" data-bs-img="./assets/images/gallery/post3.jpg">
             <div class="ratio ratio-1x1">
                  <img src="./assets/images/gallery/post3.jpg" class="img-fluid object-fit-cover hover-zoom" alt="Gallery Image 3">
             </div>
@@ -174,21 +174,21 @@
     </div>
     <div class="row row-cols-3 g-lg-2 g-mt-1 g-1 mt-0 wow animate__fadeInRight" data-wow-duration="1s">
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post4.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal4" data-bs-img="./assets/images/gallery/post4.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post4.jpg" class="img-fluid rounded-1 object-fit-cover shadow" alt="Gallery Image 4">
             </div>
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post5.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal5" data-bs-img="./assets/images/gallery/post5.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post5.jpg" class="img-fluid rounded-1 object-fit-cover shadow" alt="Gallery Image 5">
             </div>
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post6.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal6" data-bs-img="./assets/images/gallery/post6.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post6.jpg" class="img-fluid rounded-1 object-fit-cover shadow" alt="Gallery Image 6">
             </div>
@@ -197,21 +197,21 @@
     </div>
     <div class="row row-cols-3 g-lg-2 g-mt-1 g-1 mt-0 wow animate__fadeInLeft" data-wow-duration="1s">
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post7.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal7" data-bs-img="./assets/images/gallery/post7.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post7.jpg" class="img-fluid rounded-1 object-fit-cover shadow" alt="Gallery Image 4">
             </div>
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post8.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal8" data-bs-img="./assets/images/gallery/post8.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post8.jpg" class="img-fluid rounded-1 object-fit-cover shadow" alt="Gallery Image 5">
             </div>
             </a>
         </div>
         <div class="col-lg-4">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-img="./assets/images/gallery/post9.jpg">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal9" data-bs-img="./assets/images/gallery/post9.jpg">
             <div class="ratio ratio-1x1">
                 <img src="./assets/images/gallery/post9.jpg" class="img-fluid rounded-1 object-fit-cover shadow" alt="Gallery Image 6">
             </div>
@@ -222,11 +222,91 @@
 <!-- End of Insta Section -->
 
 <!-- Modal -->
-<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="imageModal1" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content bg-transparent border-0">
       <div class="modal-body p-0 d-flex justify-content-center align-items-center">
-        <img src="" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <img src="./assets/images/gallery/post1.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal2" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post2.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal3" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post3.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal4" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post4.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal5" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post5.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal6" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post6.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal7" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post7.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal8" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post8.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="imageModal9" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-transparent border-0">
+      <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+        <img src="./assets/images/gallery/post9.jpg" id="modalImage" class="img-fluid rounded shadow-lg fit-viewport-img" alt="Zoomed view">
         <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
       </div>
     </div>
