added animation to map

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 </p>
             </div>
             <div class="col-lg-6" id="map-container">
-                <div class="map-placeholder shadow-lg rounded" style="height: 440px; background-color: #ddd; display: flex; align-items: center; justify-content: center;">
+                <div class="map-placeholder shadow-lg rounded wow animate__zoomIn" data-wow-duration="2s" style="height: 440px; background-color: #ddd; display: flex; align-items: center; justify-content: center;">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.0940551963963!2d121.07329403618091!3d14.650602059813098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b763393faa1d%3A0xce0fcdf5b38ceb8c!2sUP+Town+Center!5e0!3m2!1sen!2sph!4v1552633695205" height="100%" width="100%"></iframe>
                 </div>
             </div>
