removed footer logo href

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 </ul>
             </div>
             <div class="footer-brand col-lg-1 col-md-1 d-flex justify-content-center">
-                <a class="footer-brand" href=""><img class="footer-logo img-fluid" src="assets/images/logo/footer.png"></a>
+                <a class="footer-brand"><img class="footer-logo img-fluid" src="assets/images/logo/footer.png"></a>
             </div>
         </div>
     </div>
