--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <title>Ground Up&reg Menu</title>
     <!-- Favicon -->
     <link rel="icon" type="image/gif/png" sizes="32x32" href="assets/images/logo/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="assets/images/logo/apple-touch-icon.png">
     <!-- CSS Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
