--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark wow animate__fadeIn" data-wow-duration="1s">
+<nav class="navbar navbar-expand-lg navbar-dark wow animate__fadeIn" data-wow-duration="1s">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img class="logo" src="assets/images/logo/circle-logo.png" alt="ground-up-circle-logo"><img class="logo" src="assets/images/logo/logo.png" alt="ground-up-logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
