--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <h2 class="section-heading pb-lg-4 pb-3"><span class="heading-brown">Our Location & Hours</span></h2>
         <div class="row">
             <div class="col-lg-6">
-                <p class="location-text pb-lg-3 pb-0"><strong>U.P. Town Center</strong>, Katipunan Ave, Diliman, Quezon City, 1108 Metro Manila</p>
+                <p class="location-text pb-lg-3 pb-0"><i class="fa-solid fa-map-pin"></i><strong> U.P. Town Center</strong>, Katipunan Ave, Diliman, Quezon City, 1108 Metro Manila</p>
                 <p class="location-heading">Hours:</p>
                 <ul class="location-text list-unstyled">
                     <li>Tue - Fri: <strong>10:00 AM – 11:00 PM</strong></li>
